--- a/CV/index.html
+++ b/CV/index.html
@@ -47,13 +47,11 @@
     </aside>
     <main>
         <h1><u>РЕЗЮМЕ</u></h1>
-        <hr>
-        <section id="profile">
+        <section class= "section__main" id="profile">
             <h2>Профіль</h2>
             <p>Я юрист і на даний момент працюю в ПрАТ "ВФ Україна". Зараз планую змінити професію і успішно подолала уже три уроки на курсі "Front-End Розробка" в <a href="https://beetroot.academy/" target="_blank">Beetroot Academy.</a></p> 
         </section>
-        <hr>
-        <section id="skills">
+        <section class= "section__main" id="skills">
             <h2>Навички</h2>
             <ul>
                 <li><label for="presentation">Презентація</label>
@@ -69,8 +67,7 @@
                     <progress id="cooperation" value="100" max="100">100%</progress></li>
             </ul>
         </section>
-        <hr>
-        <section id="experience"><h2>Досвід роботи</h2>
+        <section class= "section__main" id="experience"><h2>Досвід роботи</h2>
             <ul>
                 <li><p><b>Юрисконсульт - 2012-2014 рр.</b></p>
                     <p><i>Асоціація «Украгромайно ВССП»</i></p>  
@@ -89,23 +86,20 @@
                 </li>
             </ul>
         </section>
-        <hr>
-        <section id="education"><h2>Освіта і кваліфікація</h2>
+        <section class= "section__main" id="education"><h2>Освіта і кваліфікація</h2>
             <ul>
                 <li>Київський національний університет імені Т.Г. Шевченка – диплом бакалавра правознавства з відзнакою (2008 -2012 рр.)</li>
                 <li>Київський національний університет імені Т.Г. Шевченка – диплом магістра правознавства з відзнакою (2012-2014 рр.)</li>
             </ul>
         </section>
-        <hr>
-        <section id="languages"><h2>Мови</h2>
+        <section class= "section__main" id="languages"><h2>Мови</h2>
             <ul>
                 <li>Українська</li>
                 <li>Російська</li>
                 <li>Англійська</li>
             </ul>
         </section>
-        <hr>
-        <section id="interests"><h2>Інтереси</h2>
+        <section class= "section__main" id="interests"><h2>Інтереси</h2>
             <ul>
                 <li>Подорожі (рафтинг, кемпінг)</li>
                 <li>Читання книжок</li>
